<resources>
    <string name="app_name">eDrobe</string>
    <string name="home_pg">HomePage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="homepage">Homepage</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="signUpPassword">Password</string>
    <string name="SignPhone">Phone</string>
    <string name="address">Address</string>
    <string name="sign_Up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="signupEmail">Email</string>
    <string name="itemCategories">Categories</string>
    <string name="itemSearch">Search</string>
    <string name="itemHome">Home</string>
    <string name="itemCart">Cart</string>
    <string name="itemAccount">Account</string>
    <string name="account_details">Account Details</string>
    <string name="menclothing">menClothing</string>
    <string name="buy_now">BUY NOW</string>
    <string name="men_s_fashion">MEN\'S FASHION</string>
</resources>